discussion/kv_engine/187503/187503_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55391: WIP

Change-Id: If292d10d03cbddeb34cd567e7ce5110a5d58db70

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Dave Rigby
Date: 2023-02-28 16:31:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-28 17:07:26.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22806/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/checkpoint_manager.cc b/engines/ep/src/checkpoint_manager.cc
index 2a92c4b49..8f68a27d9 100644
--- a/engines/ep/src/checkpoint_manager.cc
+++ b/engines/ep/src/checkpoint_manager.cc
@@ -39,7 +39,7 @@ CursorRegResult::CursorRegResult(CheckpointManager&amp; manager,
     : tryBackfill{tryBackfill},
       seqno{seqno},
       manager{&amp;manager},
-      cursor{cursor} {
+      cursor{std::move(cursor)} {
 }
 
 CursorRegResult::CursorRegResult(CursorRegResult&amp;&amp;) = default;
EOF

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22806/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:38:34: warning: pass by value and use std::move [modernize-pass-by-value]
                                 Cursor cursor)
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:42:14: note: FIX-IT applied suggested code changes
      cursor{cursor} {
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:42:20: note: FIX-IT applied suggested code changes
      cursor{cursor} {
                   ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/checkpoint_manager.cc b/engines/ep/src/checkpoint_manager.cc
index 2a92c4b49..8f68a27d9 100644
--- a/engines/ep/src/checkpoint_manager.cc
+++ b/engines/ep/src/checkpoint_manager.cc
@@ -39,7 +39,7 @@ CursorRegResult::CursorRegResult(CheckpointManager&amp; manager,
     : tryBackfill{tryBackfill},
       seqno{seqno},
       manager{&amp;manager},
-      cursor{cursor} {
+      cursor{std::move(cursor)} {
 }
 
 CursorRegResult::CursorRegResult(CursorRegResult&amp;&amp;) = default;
EOF

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22806/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52245/ : FAILURE

Failure of GoogleTest "TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_stats.cc(302): error: Value of: stats.empty()
  Actual: true
Expected: false
[  FAILED  ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl, where GetParam() = McbpSsl (8 ms)
TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52245/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43823/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23014/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1604/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24435/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26176/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33284/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24868/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12538/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12617/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25322/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
